--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-github-buttons": "3.1.0",
     "vue-material": "1.0.0-beta-11",
     "vue-router": "3.1.6",
+    "vue-session": "^1.0.0",
     "vue-social-sharing": "2.4.7",
     "vue2-google-maps": "^0.10.7",
     "vuejs-paginate": "^2.1.0"
