--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-router": "3.1.6",
     "vue-session": "^1.0.0",
     "vue-social-sharing": "2.4.7",
+    "vue-spinner": "^1.0.3",
     "vue2-google-maps": "^0.10.7",
     "vuejs-paginate": "^2.1.0"
   },
